[tool.poetry]
name = "bwpatcher"
version = "0.1.0"
description = ""
authors = ["scooterteam <scooterteam@proton.me>"]
license = "GNU AGPL Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keystone-engine = "^0.9.2"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
